# kaushalavardhanam

./: .gitignore  .usecase-prompt  README.md
ZatamOnAWS/infrastructure/: cfn.yaml  cli-invocation.sh  leaderboard-init.sql  parameters.json
code_with_q_cli/: README.md
code_with_q_cli/backend/: build.js  deploy.js  package.json
code_with_q_cli/docs/: architecture.md  deployment.md  game-design.md
code_with_q_cli/game-server/: CMakeLists.txt  build.sh
code_with_q_cli/game-server/src/: main.cpp
coding-agent/: README-Coding-Assistant.md  code_assistant.py  graph_workflow.py  graph_workflow_bkp.py  requirements.txt  streamlit_bkp.py
coding-agent/generated_code_snippets/: deploy.py  deployment_explanation.txt  game.py  game_explanation.txt
mitra/: .gitignore  CLAUDE.md  CLAUDE_CODE_BEDROCK_SETUP.md  DESIGN.md  README.md  REQUIREMENTS.md  architecture-cloud.excalidraw  architecture-diagram.excalidraw  architecture-local.excalidraw  config.yaml  flow-wake.excalidraw  main.py  pyproject.toml  requirements.txt
mitra/scripts/: gen_diagrams.py  wake_probe.py
mitra/src/: __init__.py  audio_io.py  logging_subsystem.py  orchestrator.py  vision_module.py
mitra/src/agent/: agent.py  prompts.py  validator.py
mitra/src/audio/: asr.py  vad.py  wake.py
mitra/src/cloud/: nova_vision_client.py
mitra/src/edge/: tts_engine.py
mitra/src/lexicon/: seed_lexicon.json  store.py
mitra/src/robot/: reachy.py
mitra/src/speech/: tts.py
mitra/tests/: conftest.py  test_cloud.py  test_config.py  test_edge.py  test_language_detector.py  test_lexicon.py  test_logging.py  test_orchestrator.py  test_robot.py  test_tools.py  test_validator.py  test_vision_module.py  test_wake.py
mitra/tests/hw/: test_smoke.py
mitram/: .gitignore  CLAUDE.md  DESIGN.md  README.md  REQUIREMENTS.md  architecture-cloud.excalidraw  architecture-local.excalidraw  config.py  config.yaml  main.py  pyproject.toml
mitram/scripts/: gen_diagrams.py
mitram/src/: __init__.py  language_detector.py  logging_subsystem.py  orchestrator.py
mitram/tests/: conftest.py  test_audio_io.py  test_config.py  test_lexicon.py  (+5 more)
speaking_buddy/: .gitignore  README.md  TESTING_GUIDE.md  Usecase.md  main.py  pyproject.toml
speaking_buddy/data/: lod_audio_urls.json  lod_audio_urls_by_category.json  lod_rendered_page.html  lod_sample_response.html  speaking_buddy.db
speaking_buddy/scripts/: LOD_AUDIO_FETCHING_SUMMARY.md  add_word_urls.py  capture_api_calls.py  debug_lod_page.py  fetch_all_lod_audio.py  fetch_lod_audio.py  fetch_lod_audio_selenium.py  inspect_lod_response.py  test_article_api.py  test_artikel_url.py  test_installation.sh  test_lod_api.py
speaking_buddy/src/: __init__.py  audio_processor.py  config.py  database.py  feature_comparator.py  feedback_generator.py  praat_analyzer.py  pronunciation_checker.py  reference_manager.py  session_manager.py
(+29 files in other folders)
